--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -13,6 +13,11 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v1
 
+    - name: Build
+      run: |
+        npm install
+        npm run-script build
+
     - name: Build and Deploy
       uses: JamesIves/github-pages-deploy-action@releases/v3
       with:
