Change domain name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deploy-react-app",
-  "homepage": "https://phanlyhuynh.github.io/deploy-reactjs-app-to-github-pages",
+  "homepage": "https://phanlyhuynh.github.io/test",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
